apps/external/scrypted/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scrypted
  namespace: default
spec:
  type: ExternalName
  externalName: 10.47.59.11
  ports:
    - name: https
      port: 10443
      targetPort: 10443
