apps/external/scrypted/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: scrypted
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`scrypted.joejad.com`)
      kind: Rule
      services:
        - name: scrypted
          port: 10443
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
